--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,67 @@
 @charset "UTF-8";
 /*Variables*/
 /*Mixins*/
+/*Sélecteurs*/
+.boutton {
+  width: 14em;
+  height: 3em;
+  border-radius: 60px;
+  border: none;
+  background: linear-gradient(to right bottom, #FF79DA, #9356DC);
+  font-size: 2.5em;
+  color: white;
+  box-shadow: 5px 5px 15px grey;
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 400ms;
+}
+.boutton:hover {
+  background-color: #FF79DA;
+  transform: scale(1.15);
+  opacity: 80%;
+  box-shadow: 10px 10px 30px grey;
+}
+
+.position-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.bulle_chiffre {
+  background-color: #9356DC;
+  border-radius: 100%;
+  width: 2em;
+  height: 2em;
+  color: white;
+}
+
+.bulle {
+  background-color: #F6F6F6;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 3em;
+  box-shadow: 5px 5px 30px #b8b7b7;
+}
+.bulle:hover {
+  background-color: rgba(147, 86, 220, 0.15);
+}
+.bulle:hover .icons {
+  color: #9356DC;
+  opacity: 100%;
+}
+
+.fond_gris {
+  background-color: #F6F6F6;
+}
+
+.images_figures {
+  width: 25em;
+  border-radius: 40px 40px 0px 0px;
+}
+
 @media (max-width: 600px) {
   h1, h2 {
     font-family: "Roboto", sans-serif;
@@ -24,32 +85,31 @@
     width: 80em;
   }
 
-  header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  #section_fonctionnement {
+    margin: 3em;
   }
 
   #logo {
-    width: 44em;
+    width: 37em;
     margin-top: 3em;
   }
 
-  .position-flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
   .icons {
-    font-size: 4em;
+    font-size: 3.5em;
     padding: 0.5em;
+    opacity: 50%;
+    margin-left: 0.5em;
   }
 
   #lieu {
     background-color: #EAEAEA;
     width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  form {
+    width: 33em;
   }
 
   form input {
@@ -77,18 +137,33 @@
     margin: 0em;
   }
 
-  button {
-    width: 14em;
-    height: 3em;
-    border-radius: 60px;
-    background-color: #9356DC;
-    font-size: 2.5em;
-    color: white;
+  #exploration {
+    height: 53em;
+    display: flex;
+    align-items: flex-start;
   }
 
-  #exploration {
-    background-color: #F6F6F6;
-    height: 50em;
+  #box_exploration {
+    margin-top: 3em;
+    height: 40em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  figcaption {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 2.5em;
+  }
+
+  .bulle_chiffre:nth-child(1) {
+    margin-left: -50px;
+  }
+
+  figcaption {
+    margin-left: 1em;
   }
 }
 
