--- a/sass/main.css
+++ b/sass/main.css
@@ -1,1 +1,174 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+@charset "UTF-8";
+/*Variables*/
+/*Mixins*/
+/*Sélecteurs*/
+.boutton {
+  width: 14em;
+  height: 3em;
+  border-radius: 60px;
+  border: none;
+  background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(to right bottom, #FF79DA, #9356DC);
+  font-size: 2.5em;
+  color: white;
+  -webkit-box-shadow: 5px 5px 15px grey;
+          box-shadow: 5px 5px 15px grey;
+  cursor: pointer;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 400ms;
+  transition: -webkit-transform 400ms;
+  transition: transform 400ms;
+  transition: transform 400ms, -webkit-transform 400ms;
+}
+
+.boutton:hover {
+  background-color: #FF79DA;
+  -webkit-transform: scale(1.15);
+          transform: scale(1.15);
+  opacity: 80%;
+  -webkit-box-shadow: 10px 10px 30px grey;
+          box-shadow: 10px 10px 30px grey;
+}
+
+.position-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.bulle_chiffre {
+  background-color: #9356DC;
+  border-radius: 100%;
+  width: 2em;
+  height: 2em;
+  color: white;
+}
+
+.bulle {
+  background-color: #F6F6F6;
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bulle:hover {
+  background-color: rgba(147, 86, 220, 0.15);
+}
+
+.bulle:hover .icons {
+  color: #9356DC;
+  opacity: 100%;
+}
+
+@media (max-width: 600px) {
+  h1, h2 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 5em;
+  }
+  h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 5em;
+  }
+  p {
+    font-family: "Roboto", sans-serif;
+    font-size: 3em;
+  }
+  /*Adaptation des éléments*/
+  body {
+    width: 80em;
+  }
+  main {
+    margin: 3em;
+  }
+  #logo {
+    width: 37em;
+    margin-top: 3em;
+  }
+  .icons {
+    font-size: 4em;
+    padding: 0.5em;
+    opacity: 50%;
+  }
+  #lieu {
+    background-color: #EAEAEA;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  form {
+    width: 33em;
+  }
+  form input {
+    height: 5em;
+    width: auto;
+    background-color: #EAEAEA;
+    border: 0px;
+  }
+  #ville {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 3em;
+  }
+  h1 {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 0em;
+  }
+  #texte_header {
+    width: 90%;
+    text-align: center;
+    margin: 0em;
+  }
+  #exploration {
+    background-color: #F6F6F6;
+    height: 53em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  #box_exploration {
+    margin-top: 3em;
+    height: 40em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  figcaption {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 2.5em;
+  }
+}
+/*# sourceMappingURL=main.css.map */
