--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /*Variables*/
 /*Mixins*/
+/*Mixins*/
 /*Sélecteurs*/
 .boutton {
   width: 14em;
@@ -26,6 +27,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+}
+.position-flex--flexstart {
+  justify-content: flex-start;
+}
+
+.position-flex-start {
+  display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
@@ -57,9 +67,24 @@
   background-color: #F6F6F6;
 }
 
+/*figure acceuil les restaurants*/
 .images_figures {
-  width: 25em;
+  width: 70em;
+  height: 40em;
   border-radius: 40px 40px 0px 0px;
+  object-fit: cover;
+}
+
+.texte_figure {
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  font-size: 1.4em;
+  width: 80%;
+  margin-top: 0em;
+}
+
+.margin_bottom {
+  margin-bottom: 4em;
 }
 
 @media (max-width: 600px) {
@@ -72,11 +97,13 @@
   h3 {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
-    font-size: 5em;
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
   }
 
   p {
     font-family: "Roboto", sans-serif;
+    font-weight: light;
     font-size: 3em;
   }
 
@@ -162,8 +189,45 @@
     margin-left: -50px;
   }
 
-  figcaption {
-    margin-left: 1em;
+  /*Figure*/
+  .figcaption_restaurants {
+    width: 90%;
+    border-radius: 0px 0px 40px 40px;
+    background-color: white;
+    padding-left: 1em;
+  }
+
+  .coeur:nth-child(1) {
+    font-size: 2.5em;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -80px;
+  }
+
+  .etiquette:nth-child(1) {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 2.5em;
+    background-color: #99E2D0;
+    filter: brightness(115%);
+    border-radius: 10px;
+    width: 6em;
+    height: 2em;
+    text-align: center;
+    padding-top: 25px;
+    color: green;
+    margin-left: 20em;
+    margin-bottom: -4.3em;
+    z-index: 1;
+  }
+
+  #titre_restaurants {
+    margin-left: 0.7em;
+    padding-top: 1.3em;
+  }
+
+  #section_restaurants {
+    margin-top: 15em;
   }
 }
 
