--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,12 @@
         @include typo-titres(5em);
     }
     h3{
-        @include typo-titres(5em);
+        @include typo-titres(1.5em);
+        margin-bottom: 0.5em;
     }
     p{
         font-family: $police_texte;
+        font-weight: light;
         font-size: 3em;
     }
     /*Adaptation des éléments*/
@@ -78,8 +80,39 @@
     .bulle_chiffre:nth-child(1){
         margin-left: -50px;
     }
-    figcaption{
-        margin-left: 1em;
+    /*Figure*/
+    .figcaption_restaurants{
+     width: 90%;
+     border-radius: 0px 0px 40px 40px;
+     background-color: white;
+     padding-left: 1em;
     }
-
+    .coeur:nth-child(1){
+        font-size: 2.5em;
+        display: flex;
+        justify-content: flex-end;
+        margin-top: -80px;
+        
+    }
+    .etiquette:nth-child(1){
+        @include typo-titres(2.5em);
+        background-color: $couleur_tertiaire;
+        filter: brightness(115%);
+        border-radius: 10px;
+        width:6em;
+        height: 2em;
+        text-align: center;
+        padding-top: 25px;
+        color:green;
+        margin-left: 20em;
+        margin-bottom: -4.3em;
+        z-index: 1;
+    }
+    #titre_restaurants{
+        margin-left: 0.7em;
+        padding-top: 1.3em;
+    }
+    #section_restaurants{
+        margin-top: 15em;
+    }
   }
