--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -7,3 +7,4 @@ $couleur_secondaire:#FF79DA;
 $couleur_tertiaire:#99E2D0;
 
 $police_texte:'Roboto', sans-serif;
+$police_titre_menu:'Shrikhand', cursive;
