--- a/sass/Components/_selecteurs.scss
+++ b/sass/Components/_selecteurs.scss
@@ -1,3 +1,13 @@
+/*Variables*/
+$fond_header_ville:#EAEAEA;
+$fond_gris:#F6F6F6;
+
+$couleur_primaire:#9356DC;
+$couleur_secondaire:#FF79DA;
+$couleur_tertiaire:#99E2D0;
+
+$police_texte:'Roboto', sans-serif;
+$police_titre_menu:'Shrikhand', cursive;
 /*Mixins*/
 @mixin typo-titres($taille){
     font-family: 'Roboto', sans-serif;
@@ -10,6 +20,12 @@
     font-weight: $weight;
     font-size: 1.4em;
 }
+@mixin typo-footer{
+    font-family: 'Roboto', sans-serif;
+    font-weight: light 300;
+    font-size: 1em;
+}
+
 /*Sélecteurs*/
 .boutton{
     width:14em;
@@ -87,4 +103,67 @@
 }
 .margin_bottom{
     margin-bottom: 4em;
+}
+.padding_right{
+    padding-right: 0.7em;
+}
+.padding_bottom{
+    padding-bottom: 0.5em;
+}
+/*footer*/
+.logo_footer{
+    filter: invert(93%) sepia(0%) saturate(7465%) hue-rotate(282deg) brightness(106%) contrast(103%);
+    padding-left: 1em;
+    padding-top: 0.5em;
+    height: 1.1em;
+}
+/*Les menus*/
+.image_fond{
+    width:100%;
+}
+.titres_des_menus{
+    font-family: $police_titre_menu;
+    display: flex;
+    justify-content: flex-start;
+    
+}
+.sous_titres_menus{
+     font-family:'Roboto', sans-serif; 
+     font-weight: lighter;
+     text-transform: uppercase;
+     font-size: 3em;
+     
+     border-bottom: 5px $couleur_tertiaire solid;
+     width:2.2em;
+}
+.coeur_menu{
+    font-size: 4em;
+    position: relative;
+    top: -1.5em; left: 20em;
+}
+.bulles_menu{
+    background-color: white;
+    border-radius: 30px;
+    padding-left: 1.5em;
+    padding-top:1em;
+    width:100%;
+}
+.titre_bulle_menu{
+    font-size: 3em;
+    margin-top: 0.5em;
+}
+.texte_bulle_menu{
+    font-size: 2.5em;
+    font-weight: lighter;
+    margin-top: 0em;
+}
+.prix{
+    font-size: 2.5em;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 1.5em;
+    padding-bottom: 0.5em;
+}
+.prix:nth-child(3){
+    margin-top:-70px;
 }
