--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,16 +9,16 @@
   border-radius: 60px;
   border: none;
   background: linear-gradient(to right bottom, #FF79DA, #9356DC);
-  font-size: 2.5em;
   color: white;
   box-shadow: 5px 5px 15px grey;
+  font-family: "Roboto", sans-serif;
+  font-weight: light 300;
+  font-size: 2.5em;
   cursor: pointer;
-  transform: scale(1);
   transition: transform 400ms;
 }
 .boutton:hover {
   background-color: #FF79DA;
-  transform: scale(1.15);
   opacity: 80%;
   box-shadow: 10px 10px 30px grey;
 }
@@ -161,6 +161,12 @@
   margin-top: -70px;
 }
 
+.bouton_menus {
+  display: flex;
+  justify-content: center;
+  margin-top: 10em;
+}
+
 h1, h2 {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
@@ -181,6 +187,10 @@ p {
 }
 
 /*Adaptation des éléments*/
+body {
+  width: 89em;
+}
+
 #section_fonctionnement {
   margin: 3em;
 }
@@ -188,6 +198,7 @@ p {
 #logo {
   width: 37em;
   margin-top: 3em;
+  margin-bottom: 3em;
 }
 
 .icons {
@@ -260,7 +271,7 @@ figcaption {
 
 /*Figure*/
 .figcaption_restaurants {
-  width: 90%;
+  width: 93%;
   border-radius: 0px 0px 40px 40px;
   background-color: white;
   padding-left: 1em;
@@ -304,6 +315,7 @@ figcaption {
 footer {
   background-color: #353535;
   height: 12em;
+  width: 100%;
   padding-left: 3em;
   padding-top: 1em;
   font-size: 2.5em;
@@ -324,6 +336,7 @@ footer ul li a {
 
 #le_menu {
   width: 100%;
+  height: 210em;
   background-color: #F6F6F6;
   padding-top: 1em;
   margin-top: -50px;
@@ -332,10 +345,31 @@ footer ul li a {
   border-radius: 70px 70px 0px 0px;
 }
 
-#image {
+#image_menu_un {
   height: 50em;
   width: 97em;
   background-image: url("/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+  background-size: cover;
+}
+
+#image_menu_deux {
+  height: 50em;
+  width: 97em;
+  background-image: url("/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+  background-size: cover;
+}
+
+#image_menu_trois {
+  height: 50em;
+  width: 97em;
+  background-image: url("/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+  background-size: cover;
+}
+
+#image_menu_quatre {
+  height: 50em;
+  width: 97em;
+  background-image: url("/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
   background-size: cover;
 }
 
@@ -343,6 +377,11 @@ footer ul li a {
   font-size: 3em;
   position: relative;
   right: 7em;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
