--- a/public/css/style.css
+++ b/public/css/style.css
@@ -410,4 +410,71 @@ a {
   color: black;
 }
 
+/*SPINNER LOADING*/
+.box_spinner {
+  animation: spinner-appear 2s 0.2s;
+  z-index: -2;
+  opacity: 0;
+}
+.box_spinner .spinner_1::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 200px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border: 20px solid #9356DC;
+  border-top-color: #FF79DA;
+  animation: spinner 0.7s ease infinite;
+  opacity: 1;
+  z-index: -1;
+  background-color: #f6f6f6;
+}
+.box_spinner .spinner_2::before {
+  content: "";
+  position: absolute;
+  top: 51.8%;
+  left: 52.5%;
+  width: 118px;
+  height: 118px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border: 20px solid transparent;
+  border-top-color: #99E2D0;
+  animation: spinner_2 0.7s ease-in-out infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner_2 {
+  to {
+    transform: rotate(-360deg);
+  }
+}
+@keyframes spinner-appear {
+  0% {
+    opacity: 1;
+    z-index: 1;
+  }
+  94% {
+    opacity: 0.6;
+    z-index: 1;
+  }
+  98% {
+    opacity: 0.3;
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: 1;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
