--- a/sass/main.scss
+++ b/sass/main.scss
@@ -195,4 +195,75 @@
         text-decoration: none;
         color: black;
     }
-   
+   /*SPINNER LOADING*/
+   .box_spinner{
+    animation: spinner-appear 2s .2s;
+    z-index: -2;
+    opacity: 0;
+    .spinner_1{
+        &::before{
+            content:"";
+            
+            position:absolute;
+            top:50%; left:50%;
+            width:200px;
+            height:200px;
+            margin-top:-30px;
+            margin-left:-30px;
+            border-radius: 50%;
+            border: 20px solid $couleur_primaire;
+            border-top-color: $couleur_secondaire;
+            animation: spinner 0.7s ease infinite;
+            opacity:1; 
+            z-index: -1;
+            background-color: #f6f6f6;
+        }
+    }
+ 
+    .spinner_2{
+     &::before{
+         content:"";
+         position:absolute;
+         top:51.8%; left:52.5%;
+         width:118px;
+         height:118px;
+         margin-top:-30px;
+         margin-left:-30px;
+         border-radius: 50%;
+         border: 20px solid transparent;
+         border-top-color: $couleur_tertiaire;
+         animation: spinner_2 0.7s ease-in-out infinite;
+     }
+   }
+ 
+}
+
+ 
+   @keyframes spinner{
+       to{
+           transform: rotate(360deg);
+       }
+   }
+   @keyframes spinner_2{
+    to{
+        transform: rotate(-360deg);
+    }
+    }
+    @keyframes spinner-appear {
+        0%{
+        opacity: 1;
+        z-index: 1;
+        }
+        94%{
+        opacity: 0.6;
+        z-index: 1;
+        }
+        98%{
+        opacity: 0.3;
+        z-index: 1;
+        }
+        100%{
+        opacity: 0;
+        z-index: 1;
+        }
+    }
