--- a/public/css/style.css
+++ b/public/css/style.css
@@ -464,17 +464,73 @@ a {
     z-index: 1;
   }
   94% {
-    opacity: 0.6;
+    opacity: 0.8;
     z-index: 1;
   }
   98% {
-    opacity: 0.3;
+    opacity: 0.4;
     z-index: 1;
   }
   100% {
     opacity: 0;
     z-index: 1;
   }
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+    z-index: 1;
+  }
+  50% {
+    opacity: 0.5;
+    z-index: 1;
+  }
+  70% {
+    opacity: 0.7;
+    z-index: 1;
+  }
+  100% {
+    opacity: 1;
+    z-index: 1;
+  }
+}
+/*Apparition des plats*/
+@keyframes fadeAndScale2 {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.7;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.apparition {
+  animation: fadeAndScale2 0.5s;
+  animation-delay: 0.5s;
+  animation-fill-mode: backwards;
+}
+
+.apparition_2 {
+  animation: fadeAndScale2 0.5;
+  animation-delay: 1s;
+  animation-fill-mode: backwards;
+}
+
+.apparition_3 {
+  animation: fadeAndScale2 0.5s;
+  animation-delay: 1.5s;
+  animation-fill-mode: backwards;
 }
 
 /*# sourceMappingURL=style.css.map */
