--- a/sass/main.scss
+++ b/sass/main.scss
@@ -119,6 +119,37 @@
         margin-top: -70px;
         font-weight: 0;
     }
+/*Menu*/
+    .coeur_box_menu{
+       
+        .coeur_plein_menu{
+            opacity: 0;
+        }
+        &:hover{
+            .coeur_menu{
+                opacity: 0;
+                transition: .5s 0s ease;
+            }
+            .coeur_plein_menu{
+                @include coeur;
+                font-weight: 900;
+                font-size: 4em;
+                display: flex;
+                justify-content: flex-end;
+                margin-top: -161px;
+                position: relative;
+                right:1.25em;
+                opacity: 1;
+            }
+        }
+    }
+    .coeur_menu:nth-child(2){
+        font-size: 5em;
+        display: flex;
+        justify-content: flex-end;
+        margin-top: -70px;
+        font-weight: 0;
+    }
  
     .etiquette:nth-child(1){
         @include typo-titres(2.5em);
@@ -329,3 +360,51 @@
             animation-delay: 1.5s;
             animation-fill-mode: backwards;
         }
+
+       
+        .bulles_menu{
+            height: 14em;
+            margin-bottom: 1em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+                .icon_validation{
+                    opacity: 0;
+                }
+            &:hover{
+                .validation{ 
+                        border-radius: 0px 25px 25px 0px;
+                        background-color: $couleur_tertiaire;
+                        width: 15em;
+                        height: 15em;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        position: relative;
+                        bottom:15.5em; left:74em;
+                        animation: slide 1s;
+                }
+                    .icon_validation{
+                        opacity: 1;
+                        font-size: 4.5em;
+                        color: white;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        position: relative;
+                        transform: rotate(360deg);
+                        transition: transform 500ms ease-in-out;
+                    }
+                    .prix{
+                        transform: translateX(-250px);
+                    }
+            }
+        }
+
+        @keyframes slide {
+            from {
+              transform: translateX(8rem);
+            }
+            to {
+              transform: translateX(0);
+            }
+          }
