--- a/sass/main.scss
+++ b/sass/main.scss
@@ -120,8 +120,8 @@
         font-weight: 0;
     }
 /*Menu*/
-    .coeur_box_menu{
-       
+    .coeur_box_menu{   
+        height: 0em;
         .coeur_plein_menu{
             opacity: 0;
         }
